# PyMyGekko

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: constraints.txt  python-package.yml
PyMyGekko/: DataProvider.py  MyGekkoApiClient.py  PyMyGekko.py  PyMyGekkoApiClient.py  __about__.py  __init__.py  api_var_demo_data.json  api_var_status_demo_data.json  data_provider.py
PyMyGekko/resources/: AccessDoors.py  Actions.py  AlarmsLogics.py  Blind.py  Blinds.py  Cams.py  DoorInterComs.py  EnergyCosts.py  EnergyMeters.py  Entity.py  HotWaterSystems.py  Lights.py  Loads.py  Meteo.py  RoomTemps.py  Switches.py  Thermostats.py  Vents.py  WaterHeaters.py  __init__.py  vents.py
src/PyMyGekko/: PyMyGekko.py
tests/: api_var_status_response_slidejson  test_pymygekko.py
tests/access_doors/: test_pymygekko_access_doors_879015.py
tests/actions/: test_pymygekko_actions_596610.py  test_pymygekko_actions_680016.py
tests/alarms_logics/: test_pymygekko_alarms_logics_596610.py  test_pymygekko_alarms_logics_680016.py
tests/blinds/: api_var_response.json  api_var_status_response.json  test_pymygekko_blinds.py  test_pymygekko_blinds_596610.py  test_pymygekko_blinds_680016.py
tests/cams/: test_pymygekko_cams_879015.py
tests/door_inter_coms/: test_pymygekko_door_inter_coms_879015.py
tests/energy_costs/: test_pymygekko_energy_costs.py  test_pymygekko_energy_costs_596610.py  test_pymygekko_energy_costs_643612.py  test_pymygekko_energy_costs_slide.py
tests/energy_meters/: api_var_response.json  test_pymygekko_energy_meters.py
tests/global_networks/: api_var_response.json  api_var_status_response.json  test_pymygekko_global_networks.py
tests/hotwater_systems/: test_pymygekko_hotwater_systems_596610.py  test_pymygekko_hotwater_systems_680016.py  test_pymygekko_hotwater_systems_879015.py
tests/lights/: api_var_response.json  api_var_status_response.json  test_pymygekko_lights.py  test_pymygekko_lights_596610.py  test_pymygekko_lights_680016.py
tests/loads/: test_pymygekko_loads_680016.py
tests/meteo/: api_var_response_879015.json  api_var_status_response_879015.json  test_pymygekko_meteo_879015.py
tests/room_temps/: test_pymygekko_room_temps_596610.py  test_pymygekko_room_temps_680016.py  test_pymygekko_room_temps_713511.py  (+1 more)
(+61 files in other folders)
