[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyMyGekko"
description = "Python Library to access the myGEKKO Query API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ['mygekko']
authors = [
  { name = "Stephan Uhle", email = "stephanu@gmx.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
 "aiohttp >= 3.8"
 ]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/StephanU/#readme"
Issues = "https://github.com/StephanU/PyMyGekko/issues"
Source = "https://github.com/StephanU/PyMyGekko"

[tool.hatch.version]
path = "PyMyGekko/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-aiohttp",
  "pytest-asyncio"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=PyMyGekko --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "PyMyGekko/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
